@@ -70,6 +70,7 @@ xx-xxx-xxxx -- 3.3.719
        + Removed checks and special code for AMIGA.
        + Removed checks and work-arounds for very old gcc compilers 
          (2.x, <3.2).
+       + Removed checks and special code for SunOS4
 
     - Other
        + Generalized the write buffer for non-threaded use and renamed the
